--- a/contact.html
+++ b/contact.html
@@ -207,14 +207,14 @@
                 
                 <div class="footer-col">
                     <h3>Contact Info</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 123 Market Street, Adum, Kumasi, Ghana</p>
-                    <p><i class="fas fa-phone"></i> +233 24 123 4567</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Bantama Market Street, Kumasi, Ghana</p>
+                    <p><i class="fas fa-phone"></i> +233 24 695 0681</p>
                     <p><i class="fas fa-envelope"></i> info@twinhillenterprise.com</p>
                 </div>
             </div>
             
             <div class="copyright">
-                <p>&copy; 2023 Twinhill Enterprise. All Rights Reserved.</p>
+                <p>&copy; 2015 Twinhill Enterprise. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
