--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Add EmailJS SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3.2.0/dist/email.min.js"></script>
-    <script>
-        (function() {
-            // Initialize EmailJS with your public key
-            // Replace "YOUR_PUBLIC_KEY" with your actual EmailJS public key
-            emailjs.init("YOUR_PUBLIC_KEY");
-        })();
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init({
+            publicKey: "XPe03Tgd4GPy6d6AY",
+        });
+    })();
     </script>
     <style>
         /* Additional styles for logo */
@@ -122,7 +124,7 @@
                     <h3>Get In Touch</h3>
                     <p><i class="fas fa-map-marker-alt"></i> 123 Market Street, Adum, Kumasi, Ghana</p>
                     <p><i class="fas fa-phone"></i> +233 24 123 4567</p>
-                    <p><i class="fas fa-envelope"></i> info@twinhillenterprise.com</p>
+                    <p><i class="fas fa-envelope"></i> xeonsysitenterprise@gmail.com</p>
                     <p><i class="fas fa-clock"></i> Monday-Friday: 8:00 AM - 6:00 PM</p>
                     <p><i class="fas fa-clock"></i> Saturday: 9:00 AM - 4:00 PM</p>
                     <p><i class="fas fa-clock"></i> Sunday: Closed</p>
@@ -156,7 +158,7 @@
                             <textarea id="message" class="form-control" rows="5" required></textarea>
                         </div>
                         
-                        <button type="submit" class="btn" id="submitBtn">Send Message</button>
+                        <button type="submit" onclick="sendMail()" class="btn" id="submitBtn">Send Message</button>
                     </form>
                 </div>
             </div>
